# reiberdiagram

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/reiberdiagram/: __init__.py  befunderzeugung.py  constants.py  main.py
tests/: test_image_creation.py  test_patient_data.py  testfile.csv
