[tool.poetry]
name = "reiberdiagram"
version = "0.1.0"
description = ""
authors = ["sk <you@example.com>"]
readme = "README.md"
packages = [{include = "reiberdiagram", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
